--- a/src/main/webapp/WEB-INF/views/index.html
+++ b/src/main/webapp/WEB-INF/views/index.html
@@ -5,7 +5,7 @@
     <title>Title</title>
 </head>
 <body>
-<form th:action="@{/validate}" th:object="${user}" method="post">
+<form th:action="@{/}" th:object="${user}" method="post">
 <table>
     <tr>
         <td>First Name:</td>
@@ -16,6 +16,11 @@
         <td>Last Name:</td>
         <td><input type="text" th:field="*{lastName}"></td>
         <td th:if="${#fields.hasErrors('lastName')}" th:errors="*{lastName}"></td>
+    </tr>
+    <tr>
+        <td>Age:</td>
+        <td><input type="text" th:field="*{age}"></td>
+        <td th:if="${#fields.hasErrors('age')}" th:errors="*{age}"></td>
     </tr>
     <tr>
         <td>Email:</td>
