--- a/src/main/webapp/WEB-INF/views/result.html
+++ b/src/main/webapp/WEB-INF/views/result.html
@@ -6,23 +6,7 @@
 </head>
 <body>
 <table>
-<tr>
-    <td>First Name:</td>
-    <td th:text="${user.firstName}"></td>
-
-</tr>
-<tr>
-    <td>Last Name:</td>
-    <td th:text="${user.lastName}"></td>
-</tr>
-<tr>
-    <td>Email :</td>
-    <td th:text="${user.email}"></td>
-</tr>
-<tr>
-    <td>Phone:</td>
-    <td th:text="${user.phone}"></td>
-</tr>
+<h1>Save success</h1>
 
 </table>
 </body>
